# articubot_two

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: diff_drive_controller.yaml  display.rviz  ekf.yaml  gazebo.rviz  nav2.rviz  nav2_params.yaml  slam.rviz  slam_toolbox.yaml
launch/: display.launch.py  gazebo.launch.py  nav2.launch.py  save_map.launch.py  slam.launch.py
maps/: articubot_map.pgm  articubot_map.yaml
meshes/: base_link.stl  camera_joint_1.stl  left_wheel_1.stl  lidar_joint_1.stl  right_wheel_1.stl
urdf/: articubot_two.gazebo  articubot_two.trans  articubot_two.xacro  materials.xacro
worlds/: articubot_world.world  empty.world
